--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "symfony/dependency-injection": "~2.3",
         "symfony/filesystem": "~2.3",
         "symfony/yaml": "~2.3",
-        "twig/twig": "~1.16",
-        "jakoch/phantomjs-installer": "1.9.7"
+        "twig/twig": "~1.16"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
@@ -35,13 +34,5 @@
     },
     "bin": [
         "bin/phantomloader"
-    ],
-    "scripts": {
-        "post-install-cmd": [
-            "PhantomInstaller\\Installer::installPhantomJS"
-        ],
-        "post-update-cmd": [
-            "PhantomInstaller\\Installer::installPhantomJS"
-        ]
-    }
+    ]
 }
